[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ska-ser-snmp"
version = "0.2.0"
description = "Python package for snmp tango devices"
authors = []
license = "BSD 3-clause new license"
packages = [
    { include = "ska_attribute_polling", from = "src" },
    { include = "ska_snmp_device", from = "src" },
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "~3.10"  
pytango = "^9.4.2"
PyYAML = "^6.0"
ska-tango-base = "^1.0.0"
pysnmp-lextudio = "^5.0.27"
more-itertools = "^10.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.10.1"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.3.0"
pylint = "^2.17.2"
pylint-junit = "^0.3.2"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-forked = "^1.4.0"
pytest-json-report = "^1.5.0"
pytest-timeout = "^2.1.0"
toml = "^0.10.2"
pycodestyle = "^2.9.1"
ska-tango-testing = "^0.4.0"
snmpsim-lextudio = "^1.0.1"
types-pyyaml = "^6.0.12.10"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2"
PyYAML = "^6.0"
sphinx-rtd-theme = "^1.0"
sphinx-autodoc-typehints = "^1.19"

[tool.pytest.ini_options]
addopts = "-v"
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
